[project]
name = "dagster-essentials-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagster-webserver>=1.9.4",
    "dagster>=1.9.4",
    "duckdb>=1.1.3",
    "geopandas>=1.0.1",
    "plotly>=5.24.1",
    "kaleido==0.2.0",
    "dagster-cloud>=1.9.4",
    "dagster-duckdb>=0.25.4",
    "pandas[parquet]>=2.2.3",
    "shapely>=2.0.6",
    "pytest>=8.3.4",
    "pyarrow>=18.1.0",
    "dagster-dbt>=0.25.4",
    "dbt-duckdb>=1.9.1",
    "smart-open[s3]>=7.1.0",
    "s3fs>=0.4.2",
    "boto3>=1.35.83",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_university"


[tool.ruff.lint]
extend-ignore = [

  # (Unused import): We stub some files with just imports to help people get started
  "F401",    
  # (Import block is un-sorted or un-formatted): It's more important that we introduce the imports in the order they're used rather than alphabetically.
  "I001",

  # (relative imports): relative imports are acceptable in examples & docs
  "TID252"

]
